--- a/indexstyle.css
+++ b/indexstyle.css
@@ -221,6 +221,7 @@ a:hover {
 h3 {
   font-family: 'Hind Guntur', sans-serif;
   font-size: 25px;
+  margin-bottom: 0px;
 }
 
 h1 {
